@@ -13,6 +13,7 @@ import uuid
 
 from flask import Flask
 from nose import SkipTest
+from sqlalchemy import Boolean
 from sqlalchemy import Column
 from sqlalchemy import create_engine
 from sqlalchemy import Date
@@ -21,6 +22,8 @@ from sqlalchemy import Float
 from sqlalchemy import ForeignKey
 from sqlalchemy import Integer
 from sqlalchemy import Boolean
+from sqlalchemy import Interval
+from sqlalchemy import Time
 from sqlalchemy import Unicode
 from sqlalchemy.dialects.postgresql import UUID
 from sqlalchemy.ext.declarative import declarative_base
@@ -235,6 +238,12 @@ class TestSupport(DatabaseTestBase):
             id = Column(Integer, primary_key=True)
             name = Column(Unicode)
 
+        class User(self.Base):
+            __tablename__ = 'user'
+            id = Column(Integer, primary_key=True)
+            email = Column(Unicode, primary_key=True)
+            wakeup = Column(Time)
+
         class Planet(self.Base):
             __tablename__ = 'planet'
             name = Column(Unicode, primary_key=True)
@@ -265,6 +274,7 @@ class TestSupport(DatabaseTestBase):
             models = relationship('CarModel')
 
         self.Person = Person
+        self.User = User
         self.Program = Program
         self.ComputerProgram = ComputerProgram
         self.LazyComputer = LazyComputer
